--- a/Testapplicatie/Views/Shared/_Layout.cshtml
+++ b/Testapplicatie/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 	</div>
 </nav>
 
-<h1>HALLO Matekes !! - Xoxo Aurélie</h1>
+<h1>HALLO Matekes !! - Xoxo Aurélie ------</h1>
 
 <partial name="_CookieConsentPartial" />
 
